--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 :root {
     --bg-color: #b82a7d;
-    --primary-color: #b35d96;
-    --secondary-color: #F05454;
+    --primary-color: #da8bbf;
+    --secondary-color: #000000;
     --font: "Nunito Sans", sans-serif;
 }
 
