--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 :root {
-    --bg-color: #b82a7d;
-    --primary-color: #da8bbf;
+    --bg-color: #b8749b;
+    --primary-color: #bd2286;
     --secondary-color: #000000;
     --font: "Nunito Sans", sans-serif;
 }
